--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -23,4 +23,7 @@
 
   --footer-text-size-pc-tablet: 16px;
   --footer-text-color: #545454;
+
+  --dark-theme-background-color: #333333;
+  --light-theme-background-color: #ffffff;
 }
