add markup,start styles of notification cat

--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -18,3 +18,6 @@
 
 /* === Gallery movie styles === */
 @import './movie-cards';
+
+/* === Gallery notification styles === */
+@import './gallery-notification';
