--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -38,4 +38,6 @@
       <button class="button_lib btn_queue js-btn_queue" type="button">Queue</button>
     </div>
   </div>
+
+  <include src="./partials/lang.html"></include>
 </header>
