--- a/src/sass/layout/_gallery-notification.scss
+++ b/src/sass/layout/_gallery-notification.scss
@@ -1,6 +1,12 @@
-.notification-icon-wrapper {
+.js-notification-wrapper {
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
 }
 .notification-cat-icon {
-  margin: 15px;
+  transition: all 1s;
+  transform-origin: 50% 50%;
+}
+.notification-cat-icon:hover {
+  transform: scale(1.4);
 }
