--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -25,3 +25,8 @@
     padding: 50px 30px 40px 30px;
   }
 }
+.js-backdrop-trailer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
