--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -10,6 +10,9 @@
 /*modal-card*/
 @import './modal-movie';
 
+/*filters*/
+@import './filters-section';
+
 /* === Gallery section styles === */
 @import './gallery-cards';
 
