--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer-container {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -12,6 +12,7 @@
   line-height: 16px;
   color: var(--footer-text-color);
 }
+
 .footer-content {
   display: flex;
   align-items: center;
