--- a/src/sass/components/_button-thema.scss
+++ b/src/sass/components/_button-thema.scss
@@ -14,6 +14,7 @@ body.dark-theme {
   justify-content: flex-end;
   padding: 16px 16px;
   right: 0px;
+  bottom: -100px;
 }
 body.dark-theme {
   .footer-container {
