--- a/src/sass/components/_buttonScrollUp.scss
+++ b/src/sass/components/_buttonScrollUp.scss
@@ -1,13 +1,13 @@
 .buttonScrollUp {
   position: fixed;
+  font-size: 35px;
   bottom: 80px;
   right: 40px;
   z-index: 9999;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   text-align: center;
   line-height: 30px;
-  background: #f5f5f5;
   color: var(--secondary-active-color);
   cursor: pointer;
   border-radius: 50%;
