--- a/src/sass/layout/_team-modal.scss
+++ b/src/sass/layout/_team-modal.scss
@@ -29,7 +29,8 @@
   // height: 250px;
 }
 .image-wrapper {
-  height: 200px;
+  border-radius: 50%;
+  height: 240px;
   overflow: hidden;
   display: flex;
   justify-content: center;
