--- a/src/templates/aboutMovieTemplates.hbs
+++ b/src/templates/aboutMovieTemplates.hbs
@@ -31,7 +31,7 @@
           <p class="modal-item-description-views">{{vote_count}}</p>
         </li>
         <li class="modal-item-description">{{popularity}}</li>
-        <li class="modal-item-description">{{original_title}}</li>
+        <li class="modal-item-description">{{title}}</li>
         <li class="modal-item-description">
           <ul class="modal-list-genres list">
             {{#each genres}}
