--- a/src/sass/components/_switcher-lang.scss
+++ b/src/sass/components/_switcher-lang.scss
@@ -1,111 +1,150 @@
-.wrapper-lang-checkbox {
+.language-switch {
+  display: flex;
+  align-items: center;
+  transition: color 150ms ease-in 0;
+}
+
+.language-switch__icon {
+  color: currentColor;
+  height: 26px;
+  margin-right: 8px;
+  margin-left: 8px;
+}
+
+.switch {
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  position: relative;
+  width: 64px;
+  height: 32px;
+  border-radius: 50em;
+  padding: 3px 0;
+}
+
+.switch__input,
+.switch__label {
   position: absolute;
-  top: 10px;
-  right: 200px;
-  display: flex;
-  align-items: center;
-  @media screen and(min: width 768px) {
-    right: 165;
-    top: 193;
-  }
-  @media screen and(min: width 1024px) {
-    top: 190px;
-  }
-  &.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-  }
+  left: 0;
+  top: 0;
 }
-.switch_box-1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  max-width: 100px;
-  width: 60px;
-  height: 27px;
-  @media screen and(min: width 768px) {
-    width: 70px;
-    height: 32px;
-  }
-  @media screen and(min: width 1024px) {
-    min-width: 80px;
-    height: 36px;
-  }
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+
+.switch__input {
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+  height: 0;
+  width: 0;
+  pointer-events: none;
 }
-input[type='checkbox'].switch-lang {
-  font-size: 23px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  width: 87%;
-  height: 80%;
-  background: #000;
-  border: 1px solid var(--main-active-color);
-  border-radius: 3em;
+
+.switch__input:checked + .switch__label + .switch__marker {
+  left: calc(100% - 29px);
+}
+
+.switch__input:focus + .switch__label,
+.switch__input:active + .switch__label {
+  box-shadow: 0 0 0 3px #2a6df433;
+}
+
+.switch__label {
+  width: 100%;
+  height: 100%;
+  color: transparent;
+  user-select: none;
+  background-color: #333;
+  border-radius: inherit;
+  z-index: 1;
+  transition: background-color 150ms;
+  cursor: pointer;
+}
+
+.switch__marker {
+  position: relative;
+  background-color: #fff;
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  z-index: 2;
+  pointer-events: none;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+  left: 3px;
+  transition: left 200ms;
+  will-change: left;
+}
+.checkbox {
+  display: inline-block;
+  padding: 5px 5px 5px 46px;
+  margin: 0;
   position: relative;
   cursor: pointer;
-  outline: none;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
 }
-
-input[type='checkbox'].switch-lang:checked {
-  background: var(--main-black-color);
-}
-
-input[type='checkbox'].switch-lang:after {
+.language-checkbox {
   position: absolute;
-  content: '';
-  width: 1em;
-  height: 1em;
-  bottom: -2px;
-  @media screen and(min: width 768px) {
-    width: 1.3em;
-    height: 1.3em;
-    bottom: -3px;
-  }
-  @media screen and(min: width 1024px) {
-    bottom: -1px;
-  }
-  border-radius: 50%;
-  background: var(--accent-color);
-  -webkit-box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.3);
-  box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.3);
-  -webkit-transform: scale(0.7);
-  transform: scale(0.7);
   left: 0;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
 
-input[type='checkbox'].switch-lang:checked:after {
-  left: calc(100% - 1em);
-  @media screen and(min: width 768px) {
-    left: calc(100% - 1.3em);
+  @media screen and (max-width: 767px) {
+    top: 33px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    top: 50px;
+    left: 50px;
   }
 }
+.checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: inherit;
+}
 
-.sign {
-  margin: 0;
+.checkbox span:before,
+.checkbox span:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  transition: 0.3s;
+  /* -moz-box-sizing: border-box; */
+  /* -webkit-box-sizing: border-box; */
+  box-sizing: border-box;
+}
+.checkbox span:before {
+  left: 0;
+  height: 13px;
+  margin-top: -7px;
+  width: 62px;
+  border-radius: 5%;
+  background: var(--secondary-active-color);
+  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2);
+}
+.checkbox span:after {
+  left: 0;
+  margin-top: -7px;
+  height: 13px;
+  width: 31px;
+  background: #414040;
+  border-radius: 5%;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
+}
 
+.checkbox input:checked + span:before {
+  background-color: var(--main-active-color);
+  /* задний фон слева */
+}
+.checkbox input:checked + span:after {
+  background-color: rgba(196, 176, 167, 0.932);
+  /* переключатель справа */
+  left: 32px;
+}
+
+.checkbox input:focus + span:before {
+  box-shadow: 0 0 0 3px rgb(0, 0, 0);
+}
+
+.text-content {
+  margin-left: 20px;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.167;
-  text-align: center;
+  font-size: 12px;
   text-transform: uppercase;
   color: var(--main-white-color);
-}
-
-.is-active-lang {
-  color: var(--main-active-color);
-  box-shadow: rgba(35, 80, 129, 0.1);
 }
