--- a/src/sass/layout/_movie-cards.scss
+++ b/src/sass/layout/_movie-cards.scss
@@ -2,7 +2,9 @@
   border-radius: 5px;
   overflow: hidden;
   margin-bottom: 10px;
-  height: 406px;
+  @media screen and (min-width: 768px) {
+    height: 406px;
+  }
 }
 
 .moviе-stats__title {
