--- a/src/templates/teamModalTemplate.hbs
+++ b/src/templates/teamModalTemplate.hbs
@@ -1,28 +1,36 @@
 <ul class='team-list list'>
   {{#each this}}
-    <li class='team-list-item'>
-      <div class='image-wrapper'>
-        <img class='about-list-img' src='{{img}}' alt='Фото {{name}} {{lastName}}' />
+  <li class='team-list-item'>
+  <div class="a-box">
+  <div class="img-container">
+    <div class="img-inner">
+      <div class="inner-skew">
+        <img src='{{img}}'>
       </div>
-      <div class='team-list-text-container'>
-        <h3 class='team-list-title'>{{name}} {{lastName}}</h3>
-        <ul class='social-list list'>
+    </div>
+  </div>
+  <div class="text-container">
+    <h3>{{name}} {{lastName}}</h3>
+    <div>
+      <ul class='social-list list'>
           <li class='social-list-item'>
-            <a href='{{githubLink}}' class='social-list-link'>
+            <a href='{{githubLink}}' target="_blank" class='social-list-link'>
               <svg class='social-list-icon' width='20' height='20'>
                 <use href='./sprite.svg#icon-github'></use>
               </svg>
             </a>
           </li>
+          </li>
           <li class='social-list-item'>
-            <a href='{{linkedInLink}}' class='social-list-link'>
+            <a href='{{linkedInLink}}' target="_blank" class='social-list-link'>
               <svg class='social-list-icon' width='20' height='20'>
                 <use href='./sprite.svg#icon-linkedin'></use>
               </svg>
             </a>
           </li>
         </ul>
-      </div>
-    </li>
+  </div>
+</div>
+</li>
   {{/each}}
 </ul>
