--- a/src/templates/aboutMovieTemplatesRU.hbs
+++ b/src/templates/aboutMovieTemplatesRU.hbs
@@ -46,11 +46,11 @@
         <h3 class="modal-secondary-title">Описание</h3>
         <p class="modal-film-description">{{overview}}</p>
         <div class="modal-wrapper-btn">
-            <button class="modal-btn modal-btn-watched js-modal-btn-watched" type="button">add to watched</button>
+            <button class="modal-btn modal-btn-watched js-modal-btn-watched" type="button">добавить в просмотренное</button>
             <button
                 class="visually-hidden modal-btn modal-btn-remove modal-btn-remove-watched js-modal-btn-remove-watched"
                 type="button">переместить из просмотренных</button>
-            <button class="modal-btn modal-btn-queue js-modal-btn-queue" type="button">add to queue</button>
+            <button class="modal-btn modal-btn-queue js-modal-btn-queue" type="button">добавить в очередь</button>
             <button class="visually-hidden modal-btn modal-btn-remove modal-btn-remove-queue js-modal-btn-remove-queue"
                 type="button">переместить из очереди</button>
         </div>
