--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -29,6 +29,12 @@ button {
   cursor: pointer;
 }
 
+.wrapper {
+  // box-sizing: border-box;
+  position: relative;
+  min-height: 100%;
+}
+
 .list {
   list-style: none;
   margin: 0;
