--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer-container {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -12,35 +12,19 @@
   line-height: 16px;
   color: var(--footer-text-color);
 }
-
 .footer-content {
   display: flex;
   align-items: center;
   flex-direction: column;
 }
 .footer-icon {
-  position: relative;
   align-self: center;
   margin-left: 10px;
   margin-right: 10px;
   height: 14px;
   width: 16px;
   fill: var(--secondary-active-color);
-  transform: scale(1);
-  animation: pulse 1s linear infinite;
 }
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-  }
-  10% {
-    transform: scale(1.3);
-  }
-  // 20% {
-  //   transform: scale(0.8);
-  // }
-}
-
 .footer-rights-information {
   position: relative;
   display: flex;
