--- a/src/sass/layout/_modal-movie.scss
+++ b/src/sass/layout/_modal-movie.scss
@@ -305,8 +305,8 @@
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.wrapper-img:hover .overlay,
-.wrapper-img:focus .overlay {
+.modal-wrapper-link:hover .overlay,
+.modal-wrapper-link:focus .overlay {
   transform: translate(0);
 }
 
