--- a/src/templates/aboutMovieTemplatesRU.hbs
+++ b/src/templates/aboutMovieTemplatesRU.hbs
@@ -17,10 +17,10 @@
         </div>
     </a>
     <div class="modal-right-part">
-        <h2 class="modal-main-title">{{original_title}}</h2>
+        <h2 class="modal-main-title">{{title}}</h2>
         <div class="modal-lists-wrapper">
             <ul class="modal-list-denominations list">
-                <li class="modal-item-position">Оценка<span class="modal-item-span">/</span>Votes</li>
+                <li class="modal-item-position">Оценка<span class="modal-item-span">/</span>Голоса</li>
                 <li class="modal-item-position">Рейтинг</li>
                 <li class="modal-item-position">Оригинальное название</li>
                 <li class="modal-item-position">Жанр</li>
