--- a/src/sass/layout/_modal-movie.scss
+++ b/src/sass/layout/_modal-movie.scss
@@ -110,19 +110,19 @@
 }
 
 .modal-item-position {
-  height: 16px;
+  // height: 16px;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
   color: var(--modal-category-and-slash-color);
 }
 .modal-item-position:not(:last-child) {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .modal-list-denominations {
   width: auto;
-  height: 16px;
+  // height: 16px;
   font-size: 12px;
   line-height: 1.33;
   color: var(--main-black-color);
@@ -209,11 +209,11 @@
 .modal-btn {
   box-sizing: border-box;
   font-weight: 500;
-  font-size: 12px;
+  font-size: 11px;
   line-height: 1.33;
   text-align: center;
   color: var(--main-white-color);
-  width: 113px;
+  width: 120px;
   height: 44px;
   border-radius: 5px;
   padding-top: 5px;
@@ -235,6 +235,7 @@
 @media screen and (min-width: 1024px) {
   .modal-btn {
     width: 136px;
+    font-size: 12px;
   }
 }
 
