--- a/src/templates/aboutMovieTemplatesRU.hbs
+++ b/src/templates/aboutMovieTemplatesRU.hbs
@@ -1,6 +1,11 @@
 <div class='modal-wrapper js-modal-wrapper' data-id='{{id}}'>
   <div class='wrapper-img'>
-    <img class='img-modal' src='https://image.tmdb.org/t/p/w500{{poster_path}}' alt='cover film' />
+    <img
+      class='js-card-img'
+      src='https://image.tmdb.org/t/p/w500{{poster_path}}'
+      alt='moviе poster: {{title}}'
+      onerror="this.onerror=null;this.src='./onerror.jpg';"
+    />
     <div class='overlay'>
       <img class='modal-img-play' src='./play-orange.png' alt='icon play' />
     </div>
