disable scroll when modal is open

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -25,6 +25,9 @@ body {
   color: var(--color-design-main);
   font-weight: var(--text-bold);
 }
+body.modal-open {
+  overflow: hidden;
+}
 button {
   cursor: pointer;
 }
