--- a/src/sass/layout/_filters-section.scss
+++ b/src/sass/layout/_filters-section.scss
@@ -10,6 +10,8 @@
   padding: 16px 0;
 }
 .select {
+  background-color: #333;
+  color: var(--main-white-color);
   width: 150px;
   @media screen and (min-width: 360px) {
     width: 200px;
@@ -19,12 +21,14 @@
   border-radius: 10px;
   cursor: pointer;
 }
-.options {
-  color: var(--footer-text-color);
-  background-color: var(--background-transparent-color);
-  transition: color 250ms linear, background-color 250ms linear;
+select option:hover,
+select option:focus,
+select option:checked {
+  background-color: var(--secondary-active-color);
 }
-.options:hover {
-  background-color: var(--modal-backdrop-color);
-  color: var(--main-white-color);
+.options {
+  border-radius: 10px;
+  color: #fff;
+  background-color: #333;
+  transition: color 250ms linear, background-color 250ms linear;
 }
