--- a/src/sass/layout/_filters-section.scss
+++ b/src/sass/layout/_filters-section.scss
@@ -8,6 +8,9 @@
   left: 16px;
   bottom: 10px;
   padding: 16px 0;
+  @media screen and (min-width: 1920px) {
+    left: 30%;
+  }
 }
 .select {
   background-color: #333;
