--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -52,11 +52,12 @@
         </li>
       </ul>
     </nav>
+    <!-- Разметка переключателя языков -->
     <div class="language-checkbox">
-      <span class="text-content">EN</span>
+      <span class="text-content">RU</span>
       <label class="checkbox">
         <input type="checkbox" class="js-switch-input" id="language-switch-control" checked />
-        <span class="text-content">ru</span>
+        <span class="text-content">EN</span>
       </label>
     </div>
     <div class="search">
